<resources>
    <string name="ADMIN_SET">管理员设置</string>
    <string name="GET_BAT_INFO">电池信息</string>
    <string name="SET_CHARGER">充电机</string>
    <string name="SET_BCU">总控参数</string>
    <string name="SET_MOTOR">控制器</string>
    <string name="GET_ERROR">故障信息</string>
    <string name="GET_WARRING">告警信息</string>
    <string name="SET_PASSWORD">密码设置</string>
    <string name="bcu_charger_lowtemp">充电低温温度</string>
    <string name="bcu_charger_lowcell">充电低温单体电压</string>
    <string name="bcu_charger_lowcurr">充电低温电流</string>
    <string name="bcu_charger_normaltemp">充电常温温度</string>
    <string name="bcu_charger_normalcell">充电常温单体电压</string>
    <string name="bcu_charger_normalcurr">充电常温电流</string>
    <string name="bcu_charger_hightemp">充电高温温度</string>
    <string name="bcu_charger_highcell">充电高温单体电压</string>
    <string name="bcu_charger_highcurr">充电高温电流</string>
    <string name="bcu_reduce_cell">降流单体电压</string>
    <string name="bcu_charger_stopvol">充电停止总压</string>
    <string name="bcu_charger_stoptemp">充电停止温度</string>
    <string name="bcu_charger_stopcurr">充电停止电流</string>
    <string name="bcu_charger_stopcellvol">充电停止单体电压</string>
    <string name="bcu_reduce_time">降流延时时间</string>
    <string name="bcu_discharger_lowtemp">放电低温温度</string>
    <string name="bcu_discharger_lowcellw">放电报警低温单体</string>
    <string name="bcu_discharger_lowcelle">放电故障低温单体</string>
    <string name="bcu_discharger_normaltemp">放电常温温度</string>
    <string name="bcu_discharger_normalcellw">放电报警常温单体</string>
    <string name="bcu_discharger_normalcelle">放电故障常温单体</string>
    <string name="bcu_discharger_hightemp">放电高温温度</string>
    <string name="bcu_discharger_highcellw">放电报警高温单体</string>
    <string name="bcu_discharger_highcelle">放电故障高温单体</string>
    <string name="bcu_lowtemp_warring_cell">放电低温报警单体电压</string>
    <string name="bcu_lowtemp_error_cell">放电低温故障单体电压</string>
    <string name="bcu_normaltemp_warring_cell">放电常温报警单体电压</string>
    <string name="bcu_normaltemp_error_cell">放电常温故障单体电压</string>
    <string name="bcu_hightemp_warring_cell">放电高温报警单体电压</string>
    <string name="bcu_hightemp_error_cell">放电高温故障单体电压</string>
    <string name="charger_high_outvoltage">充电机最高输出电压</string>
    <string name="charger_high_outcurrent">充电机最高输出电流</string>
    <string name="charger_balance_enable">充电机均衡使能</string>
    <string name="charger_para_save">参数保存</string>
    <string name="bcu_rtc_enable">总控RTC使能</string>
    <string name="bcu_rtc_enable_can">总控RTC模式CAN使能</string>
    <string name="bcu_balance_enable">bcu均衡使能</string>
    <string name="bcu_auto_checkloop">总控自动电流环校准</string>
    <string name="bcu_clear_relay">继电器粘连清除</string>
    <string name="bcu_relay_check_time">电池继电器粘连检测周期</string>
    <string name="bcu_loop_mode">电流环类型</string>
    <string name="bcu_min_battery">最小电池数</string>
    <string name="bcu_leak_warring">绝缘报警</string>
    <string name="bcu_leak_error">绝缘故障</string>
    <string name="toggle_on">打开</string>
    <string name="toggle_off">关闭</string>
    <string name="protocol_dayou">大有协议</string>
    <string name="protocol_wanxiang">万向协议</string>
    <string name="protocol_kangdi">康迪协议</string>
    <string name="motor_high_speed">最高转速</string>
    <string name="motor_high_nm">最高扭矩</string>
    <string name="updata_start">升级启动</string>
    <string name="updata_stop">升级停止</string>
    <string name="updata_file">升级文件</string>
    <string name="vendor_info">厂商信息</string>
    <string name="hard_info">硬件版本</string>
    <string name="soft_info">软件版本</string>
    <string name="up_status">升级状态</string>
    <string name="up_process">升级进度</string>
    <string name="title_activity_admin">AdminDemo</string>
    <string name="title_activity_radio">RadioActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="set_system_time">设置时间:</string>
    <string name="set_system_date">设置日期:</string>
    <string name="set_system_dateformat">设置日期格式:</string>
    <string name="set_system_upzaixian">在线升级</string>
    <string name="set_system_uplixian">离线升级</string>
    <string name="set_system_wifi_ap">个人热点</string>
    <string name="set_system_wifi_wlan">无线WIFI</string>
    <string name="wifi_ap_notice_open">网络共享已开启</string>
    <string name="wifi_ap_notice_close">打开“本车热点”共享互联网</string>
    <string name="wifi_wifi_notice_open">当前连接网络</string>
    <string name="wifi_wifi_notice_close">请先开启Wifi</string>
    <string name="wifi_wifi_notice_connecting">获取IP地址</string>
    <string name="wifi_wifi_notice_connected">连接</string>
    <string name="wifi_wifi_notice_notconnect">断开</string>
    <string name="scan_wifi_ignore">忽略此网络</string>
    <string name="scan_wifi_back">返回</string>
    <string name="password_wifi_confirm">确定</string>
    <string name="password_wifi_cancel">取消</string>
    <string name="Vwcs_LocalInstallUI_Path">storage/udisk/VwcsApk/Ecoc_Vwcs-Y001.apk</string>
    <string name="Vwcs_LocalInstallSER_Path">storage/udisk/VwcsApk/Ser_Vwcs-Y001.apk</string>
    <string name="systemchangeDescription">系统参数有变动，</string>
    <string name="saveDescription">是否保存本次操作</string>
    <string name="manager_info">管理信息：</string>
    <string name="manager">管理员：</string>
    <string name="manager_pwd">管理密码：</string>
    <string name="device_upgrade">设备升级：</string>
    <string name="device_type">设备类型：</string>
    <string name="software_version">软件版本：</string>
    <string name="hardware_version">硬件版本：</string>
    <string name="upgrade_progress">升级进度：</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_choose">升级选择</string>
    <string name="upgrade_status">升级状态：</string>
    <string name="manager_pwd_change">管理员密码修改</string>
    <string name="input_new_pwd">请输入新密码:</string>
    <string name="movie_list_load">视频列表加载中...</string>
    <string name="cam_data">20140605</string>
    <string name="choose_file_deal_way">请选择文件处理方式</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="lock">加锁</string>
    <string name="unlock">解锁</string>
    <string name="delete">删除</string>
    <string name="safe_info">安全提示</string>
    <string name="charg_gun_in">充电枪插入</string>
    <string name="batteries_a">电池组A</string>
    <string name="batteries_b">电池组B</string>
    <string name="batteries_c">电池组C</string>
    <string name="batteries_d">电池组D</string>
    <string name="percent">86%</string>
    <string name="station_reached_ceil_info">收藏电台数量已经达到上限, 请删除部分收藏项</string>
    <string name="sure">确认</string>
    <string name="default_time">14:44</string>
    <string name="default_data">2015年5月30日</string>
    <string name="default_dataday">星期五</string>
    <string name="default_degree">16度</string>
    <string name="default_data2">06/18/2014</string>
    <string name="default_weather">杭州   晴转多云</string>
    <string name="no_weather">无天气数据</string>
    <string name="demonstration_mode">演示模式</string>
    <string name="station_searching">电台搜索中...</string>
    <string name="device_onloading">设备加载中...</string>
    <string name="net_name">网络名称: K17_Ap                   ></string>
    <string name="net_pwd">网络密码:                                 ></string>
    <string name="connect_device">连接设备:</string>
    <string name="dump_energy">剩余电量:</string>
    <string name="default_percent">---%</string>
    <string name="default_percent2">50%</string>
    <string name="total_voltage">总电压:</string>
    <string name="total_current">总电流:</string>
    <string name="cell_total_voltage">单体最高:</string>
    <string name="cell_low_voltage">单体最低:</string>
    <string name="total_degree">最高温度:</string>
    <string name="low_degree">最低温度:</string>
    <string name="insulation_r">绝缘电阻:</string>
    <string name="title_soh">SOH:</string>
    <string name="title_hardware_version">硬件版本:</string>
    <string name="title_software_version">软件版本:</string>
    <string name="title_charge_count">充电次数:</string>
    <string name="title_charge_state">充电状态:</string>
    <string name="title_battery_safe">电池安全:</string>
    <string name="unit_v">--V</string>
    <string name="unit_a">--A</string>
    <string name="unit_mv">---mV</string>
    <string name="unit_degree">--°C</string>
    <string name="unit_insulation_r">----KR</string>
    <string name="unit_percent">%</string>
    <string name="unit_default_null">---S/N: (N/A)</string>
    <string name="soc_mean_value">SOC平均值:</string>
    <string name="moon_under_sea">海上晨曦</string>
    <string name="distance_road">远方之路</string>
    <string name="still_water_galaxy">三潭印月</string>
    <string name="the_snow">璀璨星雨</string>
    <string name="moonlit_clouds">雪原星空</string>
    <string name="stars_dawn">月夜行云</string>
    <string name="popular">流行</string>
    <string name="kangdi">康迪</string>
    <string name="kangdi_address">http://www.kandigroup.com.cn/</string>
    <string name="navigation">网址导航</string>
    <string name="navigation_address">http://hao.uc.cn/</string>
    <string name="taobao">淘宝</string>
    <string name="taobao_address">https://www.taobao.com</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_address">https://authzui.alipay.com/login/index.htm</string>
    <string name="antfortune">蚂蚁聚宝</string>
    <string name="antfortune_address">http://www.antfortune.com</string>
    <string name="xiamimusic">虾米音乐</string>
    <string name="xiamimusic_address">http://www.xiami.com</string>
    <string name="baidu">百度</string>
    <string name="xinlang">新浪</string>
    <string name="xinlang_address">http://www.sina.com</string>
    <string name="tengxun">腾讯</string>
    <string name="google_address">http://www.google.cn/</string>
    <string name="google">Google</string>
    <string name="facebook_address">http://www.facebook.com</string>
    <string name="facebook">Facebook</string>
    <string name="twitter_address">http://www.twitter.com</string>
    <string name="twitter">Twitter</string>
    <string name="youtobe_address">http://www.youtube.com</string>
    <string name="youtobe">YouTobe</string>
    <string name="amazon_address">http://www.amazon.com</string>
    <string name="amazon">Amazon</string>
    <string name="xiecheng">携程</string>
    <string name="public_comment">大众点评</string>
    <string name="public_comment_address">http://www.dianping.com</string>
    <string name="input_net_address">请输入网址</string>
    <string name="delete_yes_no">是否删除?</string>
    <string name="my_collection">我的收藏</string>
    <string name="history_record">历史记录</string>
    <string name="baidu_address">http://www.baidu.com</string>
    <string name="prompt">提示</string>
    <string name="now_use_networks">当前使用的是蜂窝网络!</string>
    <string name="makesure">确定</string>
    <string name="okhttp">请输入正确的网址</string>
    <string name="input_city">请输入城市</string>
    <string name="sunny">晴</string>
    <string name="cloudy">多云</string>
    <string name="snow">雪</string>
    <string name="rain">雨</string>
    <string name="thunder">雷</string>
    <string name="shade">阴</string>
    <string name="position">定位</string>
    <string name="next_song">下一首</string>
    <string name="next_fre">下一个调频</string>
    <string name="next_radio">下个电台</string>
    <string name="pre_song">上一首</string>
    <string name="pre_fre">上一个调频</string>
    <string name="pre_radio">上个电台</string>
    <string name="obj_lamp">大灯</string>
    <string name="obj_farlamp">远光灯</string>
    <string name="pause_song">暂停</string>
    <string name="stop_song">停止</string>
    <string name="play_song">播放</string>
    <string name="play">play</string>
    <string name="default_nothing"></string>
    <string name="contentDescription">contentDescription</string>
    <string name="txt_import">导入</string>
    <string name="txt_delete">删除 </string>
    <string name="txt_all">全选</string>
    <string name="txt_cancel">取消</string>
    <string name="upsubmit">升级</string>
    <string name="upcancel">取消</string>
    <string name="updelay">暂缓</string>
    <string name="firmup">ECU固件更新</string>
    <string name="upcompete">完成</string>
</resources>