<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:id="@+id/bgview"
     >
    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@drawable/music_file_bg"
	    android:layout_centerInParent="true"
	    android:id="@+id/mainview"
	    android:orientation="vertical" >
	
	    <FrameLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="80dp"
	            android:layout_marginTop="30dp"
	            android:orientation="horizontal" >
	
	            <ImageButton
	               android:id="@+id/ib_video_local"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@null"
	                android:src="@drawable/music_file_tap_locality_video_on" />
	
	            <ImageButton
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="60dp"
	                android:background="@null"
	                android:id="@+id/ib_video_usb"
	                android:src="@drawable/music_file_tap_usb_on" />
	            
	            <ImageButton
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="90dp"
	                android:id="@+id/refreshfilebtn"
	                android:background="@null"
	                android:src="@drawable/recreation_refresh" />
	        </LinearLayout>
	
	        <ImageView
	            android:id="@+id/iv_video_nextline"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/music_file_light" />
	    </FrameLayout>
		<FrameLayout 
		    android:layout_width="600dp"
		    android:layout_height="468dp"
		    >
	    <ListView
	        android:id="@+id/linearListView"
	        android:layout_width="match_parent"
	        android:layout_height="468dp"
	        android:cacheColorHint="@android:color/transparent"
	        android:divider="@drawable/music_file_xian"
	        android:dividerHeight="1dp"
	        android:padding="20dp"
	        android:fadingEdge="none"
	        android:listSelector="@android:color/transparent" />
	
	        <ProgressBar 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            style="@style/custProgress"
	             android:layout_marginTop="200dp"
	             android:id="@+id/pb_video_usbload"
	             android:visibility="gone"
	            />
	  </FrameLayout> 
	  <FrameLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center_horizontal" >

	            <Button
	                android:id="@+id/bt_select_all"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/txt_all"
	                android:background="@drawable/btn_small_selector"
	                android:visibility="gone" />
	            
	            <Button
	                android:id="@+id/bt_delete_select"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/txt_delete"
	                android:background="@drawable/btn_small_selector"
	                android:visibility="gone" />

	            <Button
	                android:id="@+id/bt_import_select"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="10dp"
	                android:text="@string/txt_import"
	                android:background="@drawable/btn_small_selector"
					android:visibility="gone" />

	            <Button
	                android:id="@+id/bt_cancel"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/txt_cancel"
	                android:background="@drawable/btn_small_selector"
	                android:visibility="gone" />
	            
	            <TextView 
	                android:id="@+id/txt_progress"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="@color/white"
	                android:textSize="20sp" />
	        </LinearLayout>
	    </FrameLayout>  
	</LinearLayout>
</RelativeLayout>
